# ielts-grader

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: .env.example  Dockerfile  main.py  pages.py  payments.py  requirements.txt
ielts_grader/: __init__.py  __main__.py  _private.py  cli.py  core.py  grader.py  report.py
ielts_grader/prompts/: ielts_writing_v2.yaml
